name:                uniqc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/uniqc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            CLI Tool
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable uniqc
  hs-source-dirs:      .

  main-is:             Main.hs

  build-depends:       base
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , transformers

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

